--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "gulp-starter",
-  "version": "2.2.0",
-  "description": "A full featured configurable gulp asset pipeline and static site builder",
+  "name": "ipf",
+  "version": "0.0.1",
+  "description": "Website code for inmanparkfestival.org",
   "engines": {
     "node": "0.12.2",
     "npm": "2.7.4"
   },
-  "homepage": "http://code.viget.com/gulp-starter/",
+  "homepage": "http://inmanparkfestival.org",
   "repository": {
     "type": "git",
-    "url": "git://github.com/vigetlabs/gulp-starter.git"
+    "url": "git://github.com/caltemose/ipf.git"
   },
   "scripts": {
     "deploy": "gulp deploy",
