--- a/gulpfile.js/config.json
+++ b/gulpfile.js/config.json
@@ -42,7 +42,10 @@
         "html": {
             "src": "html",
             "dest": "./",
-            "dataFile": "data/global.json",
+            "dataFiles": {
+                "globals": "./src/data/globals.json",
+                "music": "./src/data/music.json"
+            },
             "htmlmin": {
                 "collapseWhitespace": true
             },
@@ -50,7 +53,7 @@
                 "pretty": true
             },
             "extensions": ["jade", "json"],
-            "excludeFolders": ["templates", "shared", "macros", "data"]
+            "excludeFolders": ["templates"]
         },
 
         "images": {
