--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-minify-css": "^1.2.0",
     "gulp-notify": "^2.2.0",
+    "gulp-nunjucks-render": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^5.1.0",
     "gulp-rev-napkin": "^0.1.0",
