--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.2.1",
+    "gulp-concat": "^2.6.0",
     "gulp-data": "^1.2.0",
     "gulp-filesize": "0.0.6",
     "gulp-gh-pages": "^0.5.2",
