--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gulp": "gulp",
     "development": "gulp",
     "test": "gulp production && karma start --single-run",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "process-ac": "node ./data-processing/convert.js ./data-processing/2015/vendors-ac.tsv ./data-processing/2015/json/vendors-ac.json"
   },
   "dependencies": {},
   "devDependencies": {
@@ -49,6 +50,7 @@
     "gulp-rev": "^5.1.0",
     "gulp-rev-napkin": "^0.1.0",
     "gulp-rev-replace": "^0.4.2",
+    "gulp-rsync": "0.0.5",
     "gulp-sass": "^2.0.4",
     "gulp-sequence": "^0.4.0",
     "gulp-sizereport": "^1.1.2",
@@ -65,6 +67,7 @@
     "karma-nyan-reporter": "0.2.1",
     "karma-sinon-chai": "^1.0.0",
     "karma-webpack": "1.7.0",
+    "line-reader": "^0.3.0",
     "lodash": "^3.10.0",
     "merge-stream": "^0.1.8",
     "mocha": "^2.2.5",
