--- a/gulpfile.js/config.json
+++ b/gulpfile.js/config.json
@@ -35,7 +35,8 @@
         "jsplugins": {
             "src": [
                 "bower_components/jquery/jquery.min.js",
-                "bower_components/OwlCarousel2/dist/owl.carousel.min.js"
+                "bower_components/OwlCarousel2/dist/owl.carousel.min.js",
+                "src/assets/js/picturefill.min.js"
             ],
             "file": "plugins.js",
             "dest": "./public/assets/js/"
