--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "node": "0.12.2",
         "npm": "2.7.4"
     },
-    "homepage": "http://inmanparkfestival.org",
+    "homepage": "http://caltemose.github.io/ipf",
     "repository": {
         "type": "git",
         "url": "git://github.com/caltemose/ipf.git"
