remove static from asset path

--- a/gulpfile.js/config.json
+++ b/gulpfile.js/config.json
@@ -13,7 +13,7 @@
 
         "static": {
             "src": "assets/static",
-            "dest": "assets/static/"
+            "dest": "assets/"
         },
 
         "js": {
