added 2017 vendor info

--- a/gulpfile.js/config.json
+++ b/gulpfile.js/config.json
@@ -72,7 +72,7 @@
                 "vendors": {
                     "ac": "./src/data/vendors-ac.json",
                     "street": "./src/data/vendors-street.json",
-                    "cc": "./src/data/vendors-cc.json"
+                    "cc": "./src/data/vendors-community.json"
                 }
             },
             "htmlmin": {
