--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^5.3.2",
     "browser-sync": "^2.9.11",
     "compression": "^1.5.1",
+    "csvtojson": "^1.1.9",
     "del": "^2.0.2",
     "eslint": "^1.10.3",
     "eslint-config-google": "^0.3.0",
